--- a/chat.css
+++ b/chat.css
@@ -10,12 +10,13 @@
 
 /* CONTENT IS CLOSE */
 .chatbox__support {
+    display: flex;
+    flex-direction: column;
     background: #eee;
     width: 300px;
     height: 350px;
     z-index: -123456;
     opacity: 0;
-    overflow-y: scroll;
     transition: all .5s ease-in-out;
 }
 
@@ -38,6 +39,28 @@
     position: sticky;
     top: 0;
     background: orange;
+}
+
+/* MESSAGES */
+.chatbox__messages {
+    margin-top: auto;
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+}
+
+.messages__item {
+    background: orange;
+    max-width: 60.6%;
+    width: fit-content;
+}
+
+.messages__item--operator {
+    margin-left: auto;
+}
+
+.messages__item--visitor {
+    margin-right: auto;
 }
 
 /* FOOTER */
