--- a/chat.css
+++ b/chat.css
@@ -47,6 +47,7 @@
     display: flex;
     flex-direction: column;
     overflow-y: scroll;
+    flex-direction: column-reverse;
 }
 
 .messages__item {
@@ -68,3 +69,5 @@
     position: sticky;
     bottom: 0;
 }
+
+
